# robot-projects

./: .gitignore  Hints.txt  ProjectHome.md
Arduino/: Hints.txt
EV3/: .classpath  (+3 more)
Raspberry/Robocup/: CMakeLists.txt  Readme.txt  Robocup.workspace
Raspberry/Robocup/ArduinoController/: CMakeLists.txt
Raspberry/Robocup/ArduinoController/include/: ComController.h  ComPort.h  Direction.h  MotorControllerCmd.h
Raspberry/Robocup/ArduinoController/src/: CMakeLists.txt  ComController.cpp  ComMessage.cpp  ComPort.cpp  Direction.cpp
Raspberry/Robocup/Command/: CMakeLists.txt
Raspberry/Robocup/Command/include/: AddDistanceCommand.h  DirectComCommand.h  FindLineSetting.h  FollowLineCommand.h  FollowLineDistance.h  FollowLineSetting.h  LEDCommand.h  MoveAroundCliff.h  MoveDistance.h  MoveFixedDirCommand.h  NavigateToBall.h  NavigateToBook.h  NavigateToLine.h  NavigateToObject.h  ObjectDetect.h  ParseCommandLine.h  SearchForLine.h  ServoCommand.h  SnapshotCommand.h  StartDistanceCommand.h  TurnToBook.h  TurnToCenterLine.h  WaitCommand.h
Raspberry/Robocup/Command/src/: AddDistanceCommand.cpp  Command.cpp  FindLineSetting.cpp  FollowLineCommand.cpp  FollowLineDistance.cpp  FollowLineSetting.cpp  LEDCommand.cpp  MoveAroundCliff.cpp  MoveDistance.cpp  MoveFixedDirCommand.cpp  NavigateToBall.cpp  NavigateToBook.cpp  NavigateToLine.cpp  NavigateToObject.cpp  ObjectDetect.cpp  ParseCommandLine.cpp  ResetMoveCommand.cpp  SearchForLine.cpp  ServoCommand.cpp  SnapshotCommand.cpp  SpeedCommand.cpp  StartDistanceCommand.cpp  TurnToBook.cpp  TurnToCenterLine.cpp  WaitCommand.cpp
Raspberry/Robocup/CommandScript/: CMakeLists.txt
Raspberry/Robocup/CommandScript/include/: CommandScript.h  LoggingSetting.h  ParseCommandLine.h  ScriptCommands.h
Raspberry/Robocup/CommandScript/src/: CommandScript.cpp  LoggingSetting.cpp  ParseCommandLine.cpp
Raspberry/Robocup/Console/: CMakeLists.txt
Raspberry/Robocup/Console/src/: ConsolePrint.cpp
Raspberry/Robocup/Logging/: CMakeLists.txt
Raspberry/Robocup/Logging/include/: ConsolLog.h  EmptyLog.h  FileLogger.h  Logging.h  ProxyLog.h
Raspberry/Robocup/Logging/src/: ConsolLog.cpp  EmptyLog.cpp  FileLogger.cpp  ProxyLog.cpp
Raspberry/Robocup/RaspiCamCV/: CMakeLists.txt
Raspberry/Robocup/RaspiCamCV/include/: RaspiCamCV.h
Raspberry/Robocup/RaspiCamCV/src/: RaspiCamCV.c
Raspberry/Robocup/RaspiCamera/: CMakeLists.txt
Raspberry/Robocup/RaspiCamera/include/: CameraDetector.h  CameraNavigation.h  CameraNavigationSetting.h  PiCamera.h  RobotCamera.h  RobotCameraSetting.h
Raspberry/Robocup/RaspiCamera/src/: CameraDetector.cpp  CameraDetectorMock.cpp  CameraNavigation.cpp  CameraNavigationSetting.cpp  PiCamera.cpp  RobotCamera.cpp  RobotCameraSetting.cpp
Raspberry/Robocup/RemoteControl/: CMakeLists.txt
Raspberry/Robocup/RemoteControl/include/: Controller.h  MoveCommand.h  SpeedControl.h  View.h
Raspberry/Robocup/RemoteControl/src/: CMakeLists.txt  Controller.cpp  RemoteControl.cpp  View.cpp
Raspberry/Robocup/Robot/: CMakeLists.txt
Raspberry/Robocup/Robot/include/: SensorFactory.h
Raspberry/Robocup/Robot/src/: LoggingSetting.cpp  SensorFactory.cpp
Raspberry/Robocup/Scripts/: .gitignore  AroundThePlatform.txt  AxePort.txt  Blackline.txt  DefaultMotorPID.txt  DownTheRamp.txt  DownTheRampToStartOfRaceTrack.txt  DriveStraight.txt  FindBallScript.txt  FindLine.txt  FindLineScript.txt  FlatMotorPID.txt  FollowLine.txt  FollowLineDistance.txt  FollowLineToLeftLineCros.txt  FollowLineToRightLineCros.txt  FromAxePortToFrontOfRaceCurve.txt  FromAxePortToGoal.txt  FromBottomStairsToDoubleGate.txt  FromBottomStairsToRacetrackStart.txt  FromBottomStairsToRacingTrack.txt  FromBottomStairsToUpTheHill.txt  FromBottomStairsToUpTheHill_Longway.txt  FromDownTheTiltToRaceTrack.txt  FromDownTheTiltToRaceTrack_Longway.txt  FromEndOfRaceTrackToGoal.txt  FromRaceTrackToAxePort.txt  FromRacingCurveToFrontOfDoubleGate.txt  FromRampToDownTheStairs.txt  FromRampToDownTheTilt.txt  FromUpTheHillToDownTheTilt.txt  Initialize.txt  LineDetectLog.txt  LineSetupScript.txt  LineWidthBroad.txt  LineWidthDefault.txt  LineWidthSmall.txt  MotorPIDScript.txt  MoveAroundCliff.txt  MoveTowardsBook.txt  (+19 more)
Raspberry/Robocup/Sensors/: CMakeLists.txt
Raspberry/Robocup/Sensors/include/: Check.h  CheckWithBreak.h  DistanceCheck.h  DistanceSensorCheck.h  LineCheck.h  PortCheck.h  SensorFactory.h  SensorInfo.h  Servo.h  SwitchCheck.h  SwitchLineCheck.h
Raspberry/Robocup/Sensors/src/: CheckWithBreak.cpp  DistanceCheck.cpp  DistanceSensorCheck.cpp  LineCheck.cpp  PortCheck.cpp  SensorInfo.cpp  Servo.cpp  SwitchCheck.cpp  SwitchLineCheck.cpp
Raspberry/Robocup/Setting/: CMakeLists.txt
Raspberry/Robocup/Setting/include/: Setting.h
Raspberry/Robocup/Setting/src/: Setting.cpp
Raspberry/Robocup/StringUtil/: CMakeLists.txt
Raspberry/Robocup/StringUtil/include/: BufferedInput.h  ConsolePrint.h  Convert.h  KeyCodes.h
Raspberry/Robocup/StringUtil/src/: BufferedInput.cpp  Convert.cpp
Raspberry/Robocup/Vision/: CMakeLists.txt
Raspberry/Robocup/Vision/include/: DetectColoredObject.h  DetectObject.h  DetectSurfObject.h  DetectTemplateObject.h  LineDetect.h  LineDetectSetting.h  LineInfo.h  LinePosition.h  ObjectPosition.h  Position.h
Raspberry/Robocup/Vision/src/: DetectColoredObject.cpp  DetectObject.cpp  DetectSurfObject.cpp  DetectTemplateObject.cpp  LineDetect.cpp  LineDetectSetting.cpp  LineInfo.cpp  ObjectPosition.cpp  Position.cpp
Raspberry/Robocup/temp/: CMakeLists.txt
Raspberry/Robocup/temp/Robocup/ArduinoController/: ._MotorControllerCmd.h  ComController.cpp  ComController.h  ComPort.cpp  Direction.cpp  MotorControllerCmd.h
Raspberry/Robocup/temp/src/: FastTemplate.cpp  Template.cpp
Raspberry/Robocup/tests/: CMakeLists.txt  testgtest.cpp
Raspberry/Robocup/tests/OpenCV/: CMakeLists.txt  FPSTest.cpp
Raspberry/Robocup/tests/ParseCommandLine/: ParseCommandLineTest.cpp
Raspberry/Robocup/tests/Setting/: SettingMock.cpp  SettingMock.h  SettingTest.cpp
Raspberry/Robocup/tests/StringUtil/: Convert.cpp
Raspberry/Robocup/tests/Vision/: CMakeLists.txt  Position.cpp
(+1220 files in other folders)
